[gd_scene format=3 uid="uid://ffoyfdqwje05"]

[ext_resource type="Texture2D" uid="uid://c4bxucbukatcq" path="res://sprites/skeleton/skeleton-idle.png" id="1_pbvs3"]
[ext_resource type="Texture2D" uid="uid://d2dvaacf8bxap" path="res://sprites/skeleton/skeleton-walk.png" id="2_txkty"]
[ext_resource type="Script" uid="uid://db7xacnq1opsa" path="res://scripts/skeleton.gd" id="3_enemy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txkty"]
size = Vector2(19, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivqcw"]
atlas = ExtResource("1_pbvs3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnirc"]
atlas = ExtResource("1_pbvs3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pgwy"]
atlas = ExtResource("1_pbvs3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssl1b"]
atlas = ExtResource("1_pbvs3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4hcs"]
atlas = ExtResource("2_txkty")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_haw2w"]
atlas = ExtResource("2_txkty")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0f3v"]
atlas = ExtResource("2_txkty")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrus2"]
atlas = ExtResource("2_txkty")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e1v2"]
atlas = ExtResource("2_txkty")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjsi3"]
atlas = ExtResource("2_txkty")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nhjk"]
atlas = ExtResource("2_txkty")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghshk"]
atlas = ExtResource("2_txkty")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w4hcs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivqcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnirc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pgwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssl1b")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4hcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haw2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0f3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrus2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e1v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjsi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nhjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghshk")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_contact"]
size = Vector2(22, 31)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_bg"]
bg_color = Color(0, 0, 0, 0.72)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_fill"]
bg_color = Color(0.24, 0.86, 0.44, 0.95)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="CharacterBody2D" type="CharacterBody2D" unique_id=384193401]
z_index = 10
floor_constant_speed = true
floor_snap_length = 6.0
script = ExtResource("3_enemy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=795360315]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_txkty")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=710945947]
scale = Vector2(1.125, 1.125)
sprite_frames = SubResource("SpriteFrames_w4hcs")
animation = &"idle"
autoplay = "idle"

[node name="ContactArea" type="Area2D" parent="." unique_id=1234655652]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactArea" unique_id=1036723555]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_contact")

[node name="HealthBar" type="Node2D" parent="." unique_id=215433924]
visible = false
z_index = 5
position = Vector2(-14, -24)

[node name="Bg" type="Panel" parent="HealthBar" unique_id=1036993149]
offset_right = 28.0
offset_bottom = 4.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_health_bg")

[node name="Fill" type="Panel" parent="HealthBar/Bg" unique_id=212650501]
layout_mode = 0
offset_right = 28.0
offset_bottom = 4.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_health_fill")

[node name="PercentLabel" type="Label" parent="HealthBar" unique_id=744356179]
offset_left = -6.0
offset_top = -13.0
offset_right = 34.0
offset_bottom = -2.0
theme_override_colors/font_color = Color(1, 0.96, 0.88, 0.95)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.85)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 8
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1
